feat: Major UI/UX enhancements and new functionality features
 UI/UX Enhancements:
- Add dynamic gradient backgrounds with animated effects
- Implement enhanced button styles with hover animations and light effects
- Upgrade color system with new gradient variables and shadow effects
- Add micro-interactions and smooth transitions throughout the interface
- Improve visual hierarchy with better typography and spacing

 Enhanced Statistics System:
- Redesign statistics display with modern card-based layout
- Add new statistics: code blocks, links, images, headings, lists
- Implement animated statistics updates with smooth transitions
- Add visual icons and improved data presentation
- Real-time statistics with enhanced accuracy

 New Quick Actions:
- Add quick action buttons: Clear Content, Format Content, Save Draft
- Implement content formatting with automatic cleanup
- Add draft saving functionality with local storage
- Include confirmation dialogs for destructive actions
- Add visual feedback animations for all quick actions

 Technical Improvements:
- Enhanced CSS variables system with new gradients and animations
- Improved button component system with advanced hover effects
- Better responsive design with mobile-optimized layouts
- Enhanced JavaScript functionality with modern ES6+ features
- Improved error handling and user feedback systems

 Visual Effects:
- Dynamic background animations with subtle movement
- Button shine effects and 3D hover transformations
- Smooth scale and translate animations
- Color transitions and glow effects
- Enhanced shadow system with colored shadows

 User Experience:
- Better visual feedback for all user interactions
- Improved accessibility with focus indicators
- Enhanced mobile responsiveness
- Smoother animations and transitions
- More intuitive interface design

 Features Added:
- Advanced text statistics with comprehensive metrics
- Content formatting and cleanup tools
- Draft management system
- Enhanced visual feedback

--- a/index.html
+++ b/index.html
@@ -53,9 +53,39 @@
                     支持格式：Markdown表格、代码块、引用、列表、链接、加粗斜体等
                 </div>
                 <div class="input-stats">
-                    <span id="char-count">字符数: 0</span>
-                    <span id="word-count">单词数: 0</span>
-                    <span id="table-count">表格数: 0</span>
+                    <div class="stats-group">
+                        <span class="stat-item" id="char-count">
+                            <span class="stat-icon">📝</span>
+                            <span class="stat-value">0</span>
+                            <span class="stat-label">字符</span>
+                        </span>
+                        <span class="stat-item" id="word-count">
+                            <span class="stat-icon">📄</span>
+                            <span class="stat-value">0</span>
+                            <span class="stat-label">单词</span>
+                        </span>
+                        <span class="stat-item" id="table-count">
+                            <span class="stat-icon">📊</span>
+                            <span class="stat-value">0</span>
+                            <span class="stat-label">表格</span>
+                        </span>
+                        <span class="stat-item" id="code-count">
+                            <span class="stat-icon">💻</span>
+                            <span class="stat-value">0</span>
+                            <span class="stat-label">代码块</span>
+                        </span>
+                    </div>
+                    <div class="quick-actions">
+                        <button class="quick-btn" id="clear-content" title="清空内容">
+                            <span class="btn-icon">🗑️</span>
+                        </button>
+                        <button class="quick-btn" id="format-content" title="格式化内容">
+                            <span class="btn-icon">✨</span>
+                        </button>
+                        <button class="quick-btn" id="save-draft" title="保存草稿">
+                            <span class="btn-icon">💾</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             
